Signed-off-by: Youwillsee <1275130954@qq.com>

--- a/Freshman_Renshan_Xie/try2/try2.html
+++ b/Freshman_Renshan_Xie/try2/try2.html
@@ -4,13 +4,13 @@
 		<h2 align="left" >Frequently Asked Questions</h2>
 		<p>
 			<ol> 
-			<li ><font color="#1B0DA2"><u>Is it secure to send my company's information to COMIS?</u></font></li>
-			<li ><font color="#1B0DA2"><u>How can I enable SSl for my coputer?</u></font></li>
+			<li ><font color="#1B0DA2"><u><a href="#D1">Is it secure to send my company's information to COMIS?</a></u></font></li>
+			<li ><font color="#1B0DA2"><u><a href="#D2">How can I enable SSl for my coputer?</a></u></font></li>
 			</ol>
 			<br/>
 			<BLOCKQUOTE>
 			<ol>
-					<li><font ><strong>Is it secure to send my compant's information to COMIS?</strong></font></li>
+					<li><font ><strong><a name="D1"></a>Is it secure to send my compant's information to COMIS?</strong></font></li>
 					<p><strong>
 					Your company information is protected by your unique user name and password<br/>
 					which are used to identify your company each time you log in to COMIS.During<br/>
@@ -37,37 +37,42 @@
 						<li>The password should be a combination of numbers and letters with upper<br/>and lower case </li>
 						<li>Change your password regularly</li>
 					</ul>
-					<br/>
+					<br>
 					</strong></P>
-					<p  align="right"><font color="#532D4D"><u><strong>Back to Top</strong></u></font></P>
-				<li><strong>How can I enable SSl for my computer?</strong></li><br>
+					<p  align="right"><font color="#532D4D"><u><strong><a href="#">Back to Top</a></strong></u></font></P>
+				<li><strong><a name="D2">How can I enable SSl for my computer?</a></strong></li><br>
 				<p><strong>
 				Steps to enable SSlL for Netscape Communicator 4.79;
 				</strong></P>
 				<P>
 					<strong>
-					<ol type="a">
-							<li>Select"Communicator "from the Menu bar,</li>
-							<li>Select "Tools",</li>
-							<li>Select"Security Information",</li></strong>
+								<ol type="a">
+										<li>Select"Communicator "from the Menu bar,</li>
+										<li>Select "Tools",</li>
+										<li>Select"Security Information",</li></strong>
+										</ol>
 							<br>
 							<br>
-								<img src="1.gif"  width="700" height="450" />
+							
+								&nbsp;&nbsp;<img src="1.gif"  width="700" height="450" />
 							<br>
 							<br>
-								<strong>
-									<li>Select "Navigator",</li>
-									<li>Go to "Advanced Security(SSL) Configuration"section and click "Enable SSl<br/>
-										(Secure Sockets Layer )v2"and  "Enable SSL (Secure Sockets Layer )v3"<br/>
-										check box and</li>
-									</strong>
-							</P>
-						<p>
-							<img src="2.gif"/>			
-						</p>
-						<p><strong><li>Click "OK"to exit the dialog box.</li></strong></p>
-					</ol>
-				<p align="right"><font color="#532D4D"><u>Back to Top</u></font></P>
+							<b>
+											<ol type="a" start="4">
+								
+												<li>Select "Navigator",</li>
+												<li>Go to "Advanced Security(SSL) Configuration"section and click "Enable SSl<br>
+														(Secure Sockets Layer )v2"and  "Enable SSL (Secure Sockets Layer )v3"<br>
+														check box and</li>
+										</ol>
+							</b>
+							<p>
+								&nbsp;&nbsp;<img src="2.gif"/>			
+							</p>
+						<b><ol type="a" start="6">
+						<li>Click "OK"to exit the dialog box.</li>
+					</ol></b>
+				<p align="right"><font color="#532D4D"><u><a href="#">Back to Top</a></u></font></P>
 			</ol>
 			</BLOCKQUOTE>
 		</p>
